--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,99 @@ body {
     margin: 0 0 40px 0;
 }
 
+.form-row {
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.form-row input[type='text'],
+.form-row input[type='email']{
+    background-color: #FFFFFF;
+    border: 1px solid #d6d9dc;
+    border-radius: 3px;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 7px;
+    font-size: 14px;
+}
+
+.form-row label {
+    margin-bottom: 15px;
+}
+
+.form-row input[type='text'] :invalid,
+.form-row input[type='email'] :invalid {
+    border: 1px solid #d55c5f;
+    color: #d55c5f;
+    box-shadow: none;
+}
+
+.legacy-form-row{
+    border: none;
+    margin-bottom: 40px;
+}
+
+.legacy-form-row legend {
+    margin-bottom: 15px;
+}
+
+.legacy-form-row .radio-label {
+    display: block;
+    font-size: 14px;
+    padding: 0 20px 0 10px;
+}
+
+.legacy-form-row input[type=' radio']{
+    margin-top: 2px;
+}
+
+.legacy-form-row .radio-label,
+.legacy-form-row input[type='radio']{
+    float: left;
+}
+
 @media only screen and (min-width: 700px) {
     .speaker-form-header ,
     .speaker-form {
     width: 600px;}
+    
+    .form-row {
+        flex-direction: row;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
+    .form-row input[type='text'],
+    .form-row input[type='email'],
+    .form-row select,
+    .form-row textarea {
+        width: 100%;
+        height: initial;
+    }
+
+    .form-row label{
+        text-align: left;
+        width: 100%;
+        margin-top: 7px;
+        padding-right: 20px;
+    }
+
+    .legacy-form-row {
+        margin-bottom: 10px;
+    }
+
+    .legacy-form-row legend {
+        width: 120px;
+        text-align: right;
+        padding-right: 20px;
+    }
+
+    .legacy-form-row legend {
+        float: left;
+    }
 }
 
 .form-row {
@@ -69,3 +158,41 @@ body {
 .form-row label {
     margin-bottom: 15px;
 }
+
+.form-row select { 
+    width: 100%; 
+    padding: 5px; 
+    font-size: 14px;            
+    -webkit-appearance: none;  
+    appearance: none;  
+} 
+
+.form-row textarea { 
+    font-family: "Helvetica", "Arial", sans-serif; 
+    font-size: 14px; 
+    border: 1px solid #D6D9DC; 
+    border-radius: 3px; 
+    min-height: 200px; 
+    margin-bottom: 10px; 
+    padding: 7px; 
+    resize: none; 
+ } 
+
+.form-row .instructions {
+    color: #999999; 
+    font-size: 14px;
+    margin-bottom: 30px; 
+}
+
+form-row .instructions { 
+    margin-left: 120px; 
+} 
+
+.form-row .checkbox-label { 
+    margin-bottom: 0; 
+} 
+
+.form-row .checkbox-label { 
+    margin-left: 120px; 
+    width: auto; 
+} 
